PHOENIX-4423 Hive 2.3.0 support
Signed-off-by: Josh Elser <elserj@apache.org>